src/test/ui/infinite/infinite-macro-expansion.stderr
error: recursion limit reached while expanding the macro `recursive`
  --> $DIR/infinite-macro-expansion.rs:2:12
   |
LL |     () => (recursive!())
   |            ^^^^^^^^^^^^
...
LL |     recursive!()
   |     ------------ in this macro invocation
   |
   = help: consider adding a `#![recursion_limit="128"]` attribute to your crate

error: aborting due to previous error

